# bio

./: .flake8  .gitignore  Dockerfile  README.md  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: production.yml
bio/: asgi.py  settings.py  urls.py  wsgi.py
bio/apps/stories/: admin.py  models.py  urls.py  views.py
bio/apps/stories/migrations/: 0001_initial.py  0002_auto_20200927_2216.py  0003_auto_20200927_2219.py  0004_auto_20200928_0112.py  0005_auto_20200928_0133.py  0006_auto_20200928_0240.py  0007_auto_20200928_0256.py
bio/apps/stories/templates/: base.html
bio/apps/stories/templates/stories/: stage.html  stage_list.html  story_list.html
