[tool.poetry]
name = "bio"
version = "0.1.0"
description = ""
authors = ["Mario <mariohdpz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pre-commit = "^2.7.1"
flake8 = "^3.8.3"
flake8-isort = "^4.0.0"
flake8-docstrings = "^1.5.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
